--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,7 @@
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css"
 		integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47" crossorigin="anonymous">
+	<link rel="stylesheet" href="/global.css">
 	<link rel="stylesheet" href="/build/bundle.css">
 
 	<script defer src='/build/bundle.js'></script>
